--- a/client/main.html
+++ b/client/main.html
@@ -13,7 +13,7 @@
   {{> sidebar}}
   <div class="pusher">
     {{> header}}
-    <div class="container">
+    <div class="content">
       <div class="scroll">
         {{> yield}}
       </div>
