--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="utf-8"/>
-  <meta name="description" content="Gérez vos avoirs et vos cartes de fidélité simplement avec votre smartphone."/>
+  <meta name="description" content="Gérez vos avoirs et vos cartes de fidélité simplement et gratuitement avec votre smartphone."/>
   <meta name="author" content="Guidouil"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" href="/favicon.png"/>
@@ -11,13 +11,9 @@
 
 <template name="main">
   {{> sidebar}}
+  {{> header}}
   <div class="pusher">
-    {{> header}}
-    <div class="content">
-      <div class="scroll">
-        {{> yield}}
-      </div>
-    </div>
+    {{> yield}}
     {{> footer}}
   </div>
 </template>
