--- a/client/main.html
+++ b/client/main.html
@@ -1,11 +1,11 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="utf-8"/>
-  <meta name="description" content="Gérez vos avoirs et vos cartes de fidélité simplement et gratuitement avec votre smartphone."/>
-  <meta name="author" content="Guidouil"/>
+  <meta name="description" content="Gérez vos cartes de fidélité vos avoirs simplement et gratuitement depuis votre smartphone."/>
+  <meta name="author" content="allo@allofid.com"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" href="/favicon.png"/>
-  <title>mes avoirs</title>
+  <title>allofid</title>
 </head>
 
 
