--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Gérez vos cartes de fidélité vos avoirs simplement et gratuitement depuis votre smartphone."/>
   <meta name="author" content="allo@allofid.com"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  <link rel="icon" href="/favicon.png"/>
+  <link rel="icon" type="image/png" href="/favicon.png"/>
   <title>allofid</title>
 </head>
 
