--- a/client/main.html
+++ b/client/main.html
@@ -2,10 +2,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="utf-8"/>
   <meta name="description" content="Gérez vos cartes de fidélité vos avoirs simplement et gratuitement depuis votre smartphone."/>
-  <meta name="author" content="allo@allofid.com"/>
+  <meta name="author" content="gui@loya.li"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" type="image/png" href="/favicon.png"/>
-  <title>allofid</title>
+  <title>loyali</title>
 </head>
 
 
