--- a/client/main.html
+++ b/client/main.html
@@ -13,7 +13,9 @@
   {{> sidebar}}
   <div class="pusher">
     {{> header}}
-    {{> yield}}
+    <div class="ui main container">
+      {{> yield}}
+    </div>
     {{> growls}}
   </div>
 </template>
