about, twitter and og

--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <title>Loyali</title>
+  <meta property="og:url" content="http://loya.li" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Loyali" />
+  <meta property="og:title" content="Avec l'app Loyali, fini le porte monnaie surchargé inutilement" />
+  <meta property="og:description" content="Gérez vos cartes de fidélité et vos avoirs en temps réel. C'est gratuit et garanti sans pub, ni notification." />
+  <meta property="og:image" content="http://loya.li/loyali_android.jpg" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Avec l'app Loyali, fini le porte monnaie surchargé inutilement" />
+  <meta name="twitter:description" content="Gérez vos cartes de fidélité et vos avoirs en temps réel. C'est gratuit et garanti sans pub, ni notification." />
+  <meta name="twitter:url" content="http://loya.li" />
+  <meta name="twitter:image" content="http://loya.li/loyali_android.jpg" />
 </head>
 
 
