--- a/client/main.html
+++ b/client/main.html
@@ -2,7 +2,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="utf-8"/>
   <meta name="description" content="Avec l'application Loyali gérez vos cartes de fidélité et vos avoirs simplement et gratuitement depuis votre smartphone."/>
-  <meta name="author" content="gui@loya.li"/>
+  <meta name="author" content="guillaume@loya.li"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <title>Loyali</title>
