--- a/client/main.html
+++ b/client/main.html
@@ -12,6 +12,7 @@
   <meta property="og:title" content="Avec l'app Loyali, fini le porte monnaie surchargé inutilement" />
   <meta property="og:description" content="Gérez vos cartes de fidélité et vos avoirs en temps réel. C'est gratuit et garanti sans pub, ni notification." />
   <meta property="og:image" content="http://loya.li/loyali_android.jpg" />
+  <meta property="fb:app_id" content="562245447284862" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Avec l'app Loyali, fini le porte monnaie surchargé inutilement" />
   <meta name="twitter:description" content="Gérez vos cartes de fidélité et vos avoirs en temps réel. C'est gratuit et garanti sans pub, ni notification." />
