Currencys and stats

--- a/client/main.html
+++ b/client/main.html
@@ -18,6 +18,7 @@
   <meta name="twitter:description" content="Gérez vos cartes de fidélité et vos avoirs en temps réel. C'est gratuit et garanti sans pub, ni notification." />
   <meta name="twitter:url" content="http://loya.li" />
   <meta name="twitter:image" content="http://loya.li/images/loyali_android.jpg" />
+  <meta name="theme-color" content="#2185D0" />
 </head>
 
 
